wip: core-zero import prototype
