# pkg/zero/cluster/openapi.yaml
@@ -148,6 +148,39 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /config/default:
+    post:
+      description: |
+        Apply the raw configuration directly to the cluster.
+        This operation only has an effect before any other modifications to the
+        cluster's configuration have been made.
+      operationId: applyDefaultConfiguration
+      tags: [cluster]
+      requestBody:
+        required: true
+        content:
+          # TODO: add max payload size?
+          application/octet-stream:
+            schema:
+              type: string
+              contentMediaType: application/octet-stream
+              contentEncoding: gzip
+        description: type.googleapis.com/pomerium.config.Config
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
 components:
   parameters:
